# rust-micro

./: Cargo.toml  Makefile.toml  README.md
args/: Cargo.toml
args/src/: lib.rs
config/: Cargo.toml
config/src/: config.rs  lib.rs
doc/: package.json
doc/docs/: intro.md
examples/: README.md
examples/greeter/: Cargo.toml  build.rs
examples/greeter/proto/: echo.proto
examples/greeter/src/: client.rs  server.rs
micro/: Cargo.toml
micro/src/: app.rs  hybrid.rs  lib.rs  main.rs  service.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/client/: mod.rs
src/ecosystem/: docker.rs  etcd.rs  mod.rs
src/server/: mod.rs
