[package]
name = "rust-micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["micro", "config", "args"]
default-members = ["micro"]

[[bin]]
name = "micro"
path = "micro/src/main.rs"

[lib]
name = "micro"
path = "micro/src/lib.rs"