[package]
name = "micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/*"]

[[bin]]
name = "cargo-micro"
path = "src/main.rs"


[dependencies]
bollard = "0.13.0"
clap = { version = "4.0.32", features = ["derive"] }
http = "0.2.8"
hyper = "0.14.23"
tonic = { version = "0.8", features = ["tls", "tls-roots", "prost"] }
tower-service = "0.3.2"
tokio = { version = "1.24.1", features = ["full"] }
futures-util = "0.3.25"
portpicker = "0.1.1"
etcd-client = "0.10.2"
