[package]
name = "micro"
version = "0.1.0"
edition = "2021"
default-run = "micro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {path = "../config" }
args = {path = "../args"}
tonic-build = { version = "0.8", features = ["prost"] }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8", features = ["tls", "tls-roots", "prost"] }
tower = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
axum = {version="0.5"}
anyhow = "1"
thiserror = "1"
pin-project = "1"

