[package]
name = "greeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro = {path = "../../micro"}
tonic = { version = "0.8", features = ["tls", "tls-roots", "prost"] }
prost = "0.11"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
micro = {path = "../../micro"}

[lib]
name = "greeter"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"